[gd_scene load_steps=5 format=2]

[ext_resource path="res://Skills/SkillChoseBackground.png" type="Texture" id=1]
[ext_resource path="res://Skills/SkillIconBackground.png" type="Texture" id=2]
[ext_resource path="res://UI/SkillRow.gd" type="Script" id=3]
[ext_resource path="res://Skills/Garlic/Onion.png" type="Texture" id=4]

[node name="Row1" type="TextureRect"]
pause_mode = 2
margin_left = 61.0
margin_top = 21.0
margin_right = 338.0
margin_bottom = 132.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 3 )
Skill1IconPath = NodePath("SkillButton/TextureRect")
Skill2IconPath = NodePath("SkillButton2/TextureRect2")

[node name="SkillButton" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 56.0
margin_top = -33.5
margin_right = 128.0
margin_bottom = 38.5
mouse_filter = 1
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="SkillButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 10.0
margin_right = -12.0
margin_bottom = -13.0
texture = ExtResource( 4 )
expand = true

[node name="SkillButton2" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 153.0
margin_top = -33.5
margin_right = 225.0
margin_bottom = 38.5
mouse_filter = 1
texture_normal = ExtResource( 2 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="SkillButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 10.0
margin_right = -12.0
margin_bottom = -13.0
texture = ExtResource( 4 )
expand = true

[connection signal="mouse_entered" from="SkillButton" to="." method="_on_SkillButton_mouse_entered"]
[connection signal="pressed" from="SkillButton" to="." method="_on_SkillButton_pressed"]
[connection signal="mouse_entered" from="SkillButton2" to="." method="_on_SkillButton2_mouse_entered"]
[connection signal="pressed" from="SkillButton2" to="." method="_on_SkillButton2_pressed"]
